# dotfiles

./: .bashrc  .emacs  .gitignore  .vimrc  README.md  dotfiles.sh  init.sh  push.sh  update.sh
aerospace/: .aerospace.toml
ahk/: ModKeys.ahk
awesome/.config/awesome/: rc.lua
bash/: .bash_profile  .bashrc
crush/.config/crush/: crush.json
dotfiles-manager/: dotfiles-manager.cabal
dotfiles-manager/src/: Main.hs
dotfiles-manager/src/diff/: Diff.hs
emacs/: .emacs
ghostty/.config/ghostty/: config
git/: .gitconfig  .gitconfig-alcumus  .gitconfig.common  .gitconfig.jonfk  .gitconfig.work  .gitignore.work.global
git-server/: .gitconfig  .gitconfig.jonfk
goku/.config/: karabiner.edn
hammerspoon/.hammerspoon/: clipboard.lua  fzfFilter.lua  init.lua  init_bak.lua
ideavim/: .ideavimrc
karabiner/karabiner/: karabiner.json
karabiner/karabiner/automatic_backups/: karabiner_20240723.json  karabiner_20240801.json  karabiner_20240817.json  karabiner_20241009.json
kickstartnvim/: README.md
kickstartnvim/.config/kickstartnvim/: init.lua
lazynvim/: README.md
mise/.config/mise/: config.toml
openai-codex/.codex/: AGENTS.md  config.toml
raycast/scripts/: focus-chrome-personal.sh  focus-chrome-work.sh
rtorrent/: .rtorrent.rc
sdkman/: .sdkmanrc
shell/: .env
spacemacs/: .spacemacs
ssh/.ssh/: config
tmux/: .tmux.conf
tmux-for-servers/: .tmux.conf
vim/: .vimrc
weechat/: README.md
wezterm/: .wezterm.lua
xremap/: README.md  config.yml  restart-service.sh  xremap.service
zsh/: .p10k.zsh  .zprofile  .zsh_plugins.txt  .zshenv  .zshrc
(+66 files in other folders)
